--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -1,9 +1,26 @@
 @import "tailwindcss";
 
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/preflight.css" layer(base);
+@import "tailwindcss/utilities.css" layer(utilities);
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
+
+@font-face {
+  font-family: 'IRANYekanXVFaNumVF';
+  src: url('/fonts/Inter-Regular.otf') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+* {
+  font-family: 'IRANYekanXVFaNumVF' !important;
+}
+
 
 @theme inline {
   --color-background: var(--background);
