--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -47,3 +47,26 @@ body {
     background: radial-gradient(ellipse at center, #6B21A8 0%, transparent 70%);
   }
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #dfc8f5, #985fc6);
+  border-radius: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to bottom, #dfc8f5, #985fc6);
+}
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #dfc8f5 transparent;
+}
+
